k8s/conjur/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conjur
  namespace: conjur
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["PLACEHOLDER_DOMAIN"]
      secretName: conjur-tls
  rules:
    - host: PLACEHOLDER_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conjur-oss
                port:
                  number: 443
